2022-10-17_next_js_kubernetes_demo/kubernetes-training/cf-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers-cf
  annotations:
    cert-manager.io/issuer: letsencrypt-cf-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.local.sikademo2.uk
        - apache.local.sikademo2.uk
      secretName: webservers-tls-cf
  rules:
    - host: nginx.local.sikademo2.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: apache.local.sikademo2.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
